# Pizza

./: Bridge.hpp  CMakeLists.txt  README.md  UI.qml  core.cpp  disable-Exceptions-RTTI.cmake  main.cpp  zip.hpp
android/: AndroidManifest.xml
bytes/: _fopenU.ipp  _fseek64.ipp  file.hpp  file_view.hpp
ctypes/: array_t.hpp
ctypes/cstring/: basic_cstring_t.hpp  cstring_t.hpp
loop/for/: FOR.hpp  FOR_SIZE.hpp
resources/: Pizza.rc  resources.qrc
string_traits/: char_type.hpp  struct_string.hpp
